# Penny

./: .env.dev  .env.dev.example  .env.prod  .env.prod.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  sample.csv  sample_statements.csv
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: accounts.py  chat.py  expenses.py  gamification.py  goals.py  transactions.py  uploads.py  users.py
backend/app/core/: __init__.py  config.py  constants.py  db.py  users.py
backend/app/crud/: __init__.py  crud_account.py  crud_expense.py  crud_goal.py  crud_transaction.py  crud_user.py
backend/app/models/: __init__.py  account.py  expense.py  gamification.py  goal.py  transaction.py  transaction_split.py  user.py
backend/app/services/: cart_analysis.py  receipt_analysis.py
backend/scripts/: reseed_shop.py
extension/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppSidebar.tsx  IntroVideo.tsx  PennyFAB.tsx  PennyMascot.tsx
frontend/src/contexts/: FinanceContext.tsx
frontend/src/lib/: api.ts  icons.ts
frontend/src/pages/: Accounts.tsx  AddTransaction.tsx  Budgets.tsx  Dashboard.tsx  FinanceBreakdown.tsx  (+13 more)
main/: README.md  index.html  tailwind.config.ts
main/src/: App.tsx
(+19 files in other folders)
